added screenshot of cloud providers thumbnail; edited cloud providers description and thumbnail description; edited main providers overview in preface

--- a/doc-Managing_Providers/cfme/master.adoc
+++ b/doc-Managing_Providers/cfme/master.adoc
@@ -21,13 +21,11 @@ include::common/attributes/cfme.adoc[]
 // A provider is a server with software to manage multiple virtual machines that reside on multiple hosts.
 // from http://manageiq.org/docs/get-started/concepts - revise
 
-In {product-title_short}, a _provider_ is an external virtualization, cloud, and containers environment that manages multiple virtual machines or instances residing on multiple hosts. One example is Red Hat Virtualization, a platform that manages multiple hosts and virtual machines.
+In {product-title_short}, a _provider_ is an external virtualization, cloud, or containers environment that manages multiple virtual machines or instances residing on multiple hosts. One example is Red Hat Virtualization, a platform that manages multiple hosts and virtual machines.
 
 In {product-title_short}, a _manager_ is an external management system that manages more than one type of main resource. One example of a manager is OpenStack, which manages infrastucture, cloud, network, and storage resources.
 
-This guide covers working with providers, as well as with managers in {product-title_short}.
-
-{product-title_short} supports several types of providers and managers, which include:
+This guide covers working with providers and managers in {product-title_short}, which include:
 
 * Infrastructure providers
 * Configuration management providers
@@ -38,7 +36,7 @@ This guide covers working with providers, as well as with managers in {product-t
 * Container providers
 * Storage managers
 
-For information on managing the resources contained by a provider or manager, see link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.2/html-single/managing_infrastructure_and_inventory/[Managing Infrastructure and Inventory].
+For information on working with the resources contained by a provider or manager, see link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.2/html-single/managing_infrastructure_and_inventory/[Managing Infrastructure and Inventory].
 
 
 :leveloffset: 1
