--- a/doc-Managing_Providers/topics/Infrastructure_Providers.adoc
+++ b/doc-Managing_Providers/topics/Infrastructure_Providers.adoc
@@ -4,7 +4,7 @@
 In {product-title}, an infrastructure provider is a virtual infrastructure environment that you can add to a {product-title_short} appliance to manage and interact with the resources in that environment. This chapter describes the different types of infrastructure providers that you can add to {product-title_short}, and how to manage them. Infrastructure providers can be either discovered automatically by {product-title_short}, or added individually.
 
 
-The web interface uses virtual thumbnails to represent providers.
+The web interface uses virtual thumbnails to represent infrastructure providers.
 Each thumbnail contains four quadrants by default, which display basic information about each provider.
 
 
