--- a/doc-Managing_Providers/topics/Cloud_Providers.adoc
+++ b/doc-Managing_Providers/topics/Cloud_Providers.adoc
@@ -3,17 +3,15 @@
 
 In {product-title_short}, a cloud provider is a cloud computing environment that you can add to a {product-title_short} appliance to manage and interact with the resources in that environment. This chapter describes the different types of cloud providers that you can add to {product-title_short}, and how to manage them. Cloud providers can be either discovered automatically by {product-title_short}, or added individually.
 
-EDIT THUMBNAIL AND EXPLANATION (THIS FROM INFRASTRUCTURE PROVIDERS)
-
-The web interface uses virtual thumbnails to represent providers.
+The web interface uses virtual thumbnails to represent cloud providers.
 Each thumbnail contains four quadrants by default, which display basic information about each provider.
 
 
-image:2189.png[]
+image:Cloudthumbnail.png[]
 
-. Number of hosts
+. Number of instances
 . Management system software
-. Currently unused
+. Number of images
 . Authentication status
 
 [cols="1,1", frame="all", options="header"]
