edited cloud and infrastructure provider main intro; deleted section on discovering cloud providers as azure and amazon are already covered in their own sections

--- a/doc-Managing_Providers/topics/Infrastructure_Providers.adoc
+++ b/doc-Managing_Providers/topics/Infrastructure_Providers.adoc
@@ -15,6 +15,8 @@ image:2189.png[]
 . Currently unused
 . Authentication status
 
+.Provider authentication status
+
 [cols="1,1", frame="all", options="header"]
 |===
 |		Icon  |	Description 
