--- a/doc-Managing_Providers/topics/Cloud_Providers.adoc
+++ b/doc-Managing_Providers/topics/Cloud_Providers.adoc
@@ -1,7 +1,7 @@
 [[cloud_providers]]
 = Cloud Providers
 
-In {product-title_short}, a cloud provider is a cloud computing environment that you can add to a {product-title_short} appliance to manage and interact with the resources in that environment. This chapter describes the different types of cloud providers that you can add to {product-title_short}, and how to manage them. Cloud providers can be either discovered automatically by {product-title_short}, or added individually.
+In {product-title_short}, a cloud provider is a cloud computing environment that you can add to a {product-title_short} appliance to manage and interact with the resources in that environment. This chapter describes the different types of cloud providers that you can add to {product-title_short}, and how to manage them. Most cloud providers are added individually to {product-title_short}. Additionally, Amazon EC2 and Azure cloud providers can be discovered automatically by {product-title_short}.
 
 The web interface uses virtual thumbnails to represent cloud providers.
 Each thumbnail contains four quadrants by default, which display basic information about each provider.
@@ -14,6 +14,8 @@ image:Cloudthumbnail.png[]
 . Number of images
 . Authentication status
 
+.Provider authentication status
+
 [cols="1,1", frame="all", options="header"]
 |===
 |		Icon  |	Description 
@@ -22,9 +24,6 @@ image:Cloudthumbnail.png[]
 | image:2192.png[] | Unknown: Authentication status is unknown or no credentials have been entered.
 |===
 
-
-:leveloffset: 2
-include::Discovering_Multiple_Cloud_Systems.adoc[]
 
 :leveloffset: 2
 = OpenStack Providers
