edited Config Management provider intro; made intros & prefaces the same; added missing sections to TOC of MIQ version of the guide

--- a/doc-Managing_Providers/topics/Configuration_Management_Providers.adoc
+++ b/doc-Managing_Providers/topics/Configuration_Management_Providers.adoc
@@ -1,32 +1,10 @@
 [[configuration_management_providers]]
 = Configuration Management Providers
 
-EDIT THUMBNAIL AND EXPLANATION (THIS FROM INFRASTRUCTURE PROVIDERS)
-
-In {product-title_short}, a configuration management provider is a (?virtual infrastructure environment) that you can add to a {product-title_short} appliance to manage your resources. These configuration systems are used for recording and reporting status and change activity for these configuration items. Configuration management providers are useful for uniformly applying changes and updates across providers, and can help eliminate the confusion and error brought about by the existence of different providers. 
+In {product-title_short}, a configuration management provider is a systems management product that you can add to a {product-title_short} appliance to manage the lifecycle of your resources. Configuration management providers are useful for uniformly applying changes and updates across providers, and for recording and reporting status and change activity. They can also help eliminate the confusion and error brought about by the existence of different providers. 
 
 This chapter describes the different types of configuration management providers available to {product-title_short}, and how to manage them. Configuration management providers must be added individually to {product-title_short}.
 
-(EDIT)
-
-The web interface uses virtual thumbnails to represent providers.
-Each thumbnail contains four quadrants by default, which display basic information about each provider.
-
-
-image:2189.png[]
-
-. Number of hosts
-. Management system software
-. Currently unused
-. Authentication status
-
-[cols="1,1", frame="all", options="header"]
-|===
-|		Icon  |	Description 
-| image:2190.png[] | Validated: Valid authentication credentials have been added.
-| image:2191.png[] | 	Invalid: Authentication credentials are invalid.
-| image:2192.png[] | Unknown: Authentication status is unknown or no credentials have been entered.
-|===
 
 [[red-hat-satellite-6]]
 == Red Hat Satellite 6
