--- a/doc-Managing_Providers/cfme/master.adoc
+++ b/doc-Managing_Providers/cfme/master.adoc
@@ -14,16 +14,12 @@ include::common/attributes/cfme.adoc[]
 
 :numbered:
 
-// Read slides, research and edit this description.
 
 {product-title} can manage a variety of external environments, known as providers and managers. A provider or manager is any system that {product-title_short} integrates with for the purpose of collecting data and performing operations.
 
-// A provider is a server with software to manage multiple virtual machines that reside on multiple hosts.
-// from http://manageiq.org/docs/get-started/concepts - revise
-
 In {product-title_short}, a _provider_ is an external virtualization, cloud, or containers environment that manages multiple virtual machines or instances residing on multiple hosts. One example is Red Hat Virtualization, a platform that manages multiple hosts and virtual machines.
 
-In {product-title_short}, a _manager_ is an external management system that manages more than one type of main resource. One example of a manager is OpenStack, which manages infrastucture, cloud, network, and storage resources.
+In {product-title_short}, a _manager_ is an external management system that manages more than one type of resource. One example of a manager is OpenStack, which manages infrastucture, cloud, network, and storage resources.
 
 This guide covers working with providers and managers in {product-title_short}, which include:
 
@@ -36,7 +32,7 @@ This guide covers working with providers and managers in {product-title_short}, 
 * Container providers
 * Storage managers
 
-For information on working with the resources contained by a provider or manager, see link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.2/html-single/managing_infrastructure_and_inventory/[Managing Infrastructure and Inventory].
+For information on working with the resources contained by a provider or manager, see link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html-single/managing_infrastructure_and_inventory/[Managing Infrastructure and Inventory].
 
 
 :leveloffset: 1
