more edits to provider intros

--- a/doc-Managing_Providers/topics/Cloud_Providers.adoc
+++ b/doc-Managing_Providers/topics/Cloud_Providers.adoc
@@ -4,7 +4,7 @@
 In {product-title_short}, a cloud provider is a cloud computing environment that you can add to a {product-title_short} appliance to manage and interact with the resources in that environment. This chapter describes the different types of cloud providers that you can add to {product-title_short}, and how to manage them. Most cloud providers are added individually to {product-title_short}. Additionally, Amazon EC2 and Azure cloud providers can be discovered automatically by {product-title_short}.
 
 The web interface uses virtual thumbnails to represent cloud providers.
-Each thumbnail contains four quadrants by default, which display basic information about each provider.
+Each thumbnail contains four quadrants by default, which display basic information about each provider:
 
 
 image:Cloudthumbnail.png[]
