--- a/doc-Managing_Providers/topics/Containers_Providers.adoc
+++ b/doc-Managing_Providers/topics/Containers_Providers.adoc
@@ -1,10 +1,8 @@
 = Containers Providers
 
-A containers provider is a service that manages container resources, and can be added to the {product-title} appliance.
+A containers provider is a service that manages container resources, that can be added to the {product-title} appliance.
 
-//Dayle note - this description looks newish, probably doesn't need editing
-
-{product-title_short} can connect to OpenShift Container Platform containers providers and manage them similarly to infrastructure and cloud providers. This allows you to gain control over different aspects of your environment and answer questions, such as:
+{product-title_short} can connect to OpenShift Container Platform containers providers and manage them similarly to infrastructure and cloud providers. This allows you to gain control over different aspects of your containers environment and answer questions such as:
 
 * How many containers exist in my environment?
 * Does a specific node have enough resources?
@@ -20,27 +18,6 @@ When {product-title_short} connects to a container's environment, it collects in
 
 You can manage policies for containers entities by adding tags. All containers entities except volumes can be tagged.
 
-
-EDIT THUMBNAIL AND EXPLANATION (THIS FROM INFRASTRUCTURE PROVIDERS)
-
-The web interface uses virtual thumbnails to represent providers.
-Each thumbnail contains four quadrants by default, which display basic information about each provider.
-
-
-image:2189.png[]
-
-. Number of hosts
-. Management system software
-. Currently unused{product-title_short}
-. Authentication status
-
-[cols="1,1", frame="all", options="header"]
-|===
-|		Icon  |	Description 
-| image:2190.png[] | Validated: Valid authentication credentials have been added.
-| image:2191.png[] | 	Invalid: Authentication credentials are invalid.
-| image:2192.png[] | Unknown: Authentication status is unknown or no credentials have been entered.
-|===
 
 :leveloffset: 2
 [[Obtaining_OpenShift_Container_Platform_Management_Token]]
