--- a/doc-Managing_Providers/topics/Infrastructure_Providers.adoc
+++ b/doc-Managing_Providers/topics/Infrastructure_Providers.adoc
@@ -5,7 +5,7 @@ In {product-title}, an infrastructure provider is a virtual infrastructure envir
 
 
 The web interface uses virtual thumbnails to represent infrastructure providers.
-Each thumbnail contains four quadrants by default, which display basic information about each provider.
+Each thumbnail contains four quadrants by default, which display basic information about each provider:
 
 
 image:2189.png[]
