Further updates based on the latest build for the 5.8 release.

--- a/doc-Introduction_to_Self_Service_Portal/topics/Accessing_Self_Service_UI.adoc
+++ b/doc-Introduction_to_Self_Service_Portal/topics/Accessing_Self_Service_UI.adoc
@@ -12,7 +12,7 @@ https://_HOSTNAME_/self_service/
 
 image:SSUI_Login.png[Self Service Login Screen]
 
-You can choose your preferred language for the Self Service user interface from the options in the *Language* list available on the login screen. The language options are _English_, _Deutsch_ (German), _Español_ (Spanish), _Français_ (French), _日本語_ (Japanese), _локаль_ (Russian), _Slovensky_ (Slovak), _Türkçe_ (Turkish), and _简体中文_ (Simplified Chinese). Additionally, the _User Default_ and _Browser Default_ options default to the language already set by the user and browser respectively. 
+You can choose your preferred language for the Self Service user interface from the options in the *Language* list available on the login screen. The language options are _English_, _Español_ (Spanish), _Français_ (French), _日本語_ (Japanese), _Nederlands_ (Dutch), _Português_ (Portuguese), and _简体中文_ (Simplified Chinese). Additionally, the _User Default_ and _Browser Default_ options default to the language already set by the user or browser respectively. 
 
 [NOTE]
 ====
