--- a/doc-Introduction_to_Self_Service_Portal/topics/Navigating_Self_Service_UI.adoc
+++ b/doc-Introduction_to_Self_Service_Portal/topics/Navigating_Self_Service_UI.adoc
@@ -24,7 +24,7 @@ The Self Service user interface has introduced a new notifications feature that 
 
 Administration User Interface Link::
 
-Clicking the menu icon (image:ssui-administration-ui-icon.png[Administration UI icon]) opens the *Administration UI* link, which when clicked, takes you to the full administrative user interface login page in a new window or tab of your web browser.
+Clicking the menu icon (image:ssui-administration-ui-icon.png[Administration UI icon]) shows the *Administration UI* link, which when clicked, takes you to the full administrative user interface login page in a new window or tab of your web browser.
 
 
 Help::
@@ -40,7 +40,7 @@ Switch Language::
 
 Although you can choose your preferred language for the user interface from the login screen itself, there is also an option to switch to a different language than what is currently set by navigating to *_Administrator_* > *Switch Language* within the Self Service user interface.
 
-image:ssui-switch-language.png[Self Service Switch Language]
+image:ssui-switch-language-new.png[Self Service Switch Language]
 
 
 
