Standardized references to file names and section IDs for Volumes.

--- a/doc-Managing_Infrastructure_and_Inventory/topics/Creating_EBS_Volumes.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Creating_EBS_Volumes.adoc
@@ -1,4 +1,4 @@
-[[creating_cloud_volumes_ebs]]
+[[creating_ebs_volumes]]
 = Creating Volumes
 
 You can create and attach volumes to your storage manager.
