--- a/doc-Managing_Infrastructure_and_Inventory/topics/Creating_OpenStack_Volume_Backups.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Creating_OpenStack_Volume_Backups.adoc
@@ -1,4 +1,4 @@
-[[creating_a_backup]]
+[[creating_openstack_volume_backups]]
 = Creating a Backup of a Volume
 
 You can create a backup of a volume to protect against data loss, and restore it in the future.
