--- a/doc-Managing_Infrastructure_and_Inventory/topics/Detaching_OpenStack_Volumes.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Detaching_OpenStack_Volumes.adoc
@@ -1,4 +1,4 @@
-[[detaching_volumes]]
+[[detaching_openstack_volumes]]
 = Detaching a Volume from an Instance
 
 To detach a volume from an instance:
