--- a/doc-Managing_Infrastructure_and_Inventory/topics/Volumes.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Volumes.adoc
@@ -10,10 +10,10 @@ A volume is a block storage device that you can attach to or detach from an inst
 This section outlines the actions that you can perform on Amazon Elastic Block Store manager volumes.
 
 :leveloffset: 3
-include::Creating_Cloud_Volumes_EBS.adoc[]
+include::Creating_EBS_Volumes.adoc[]
 
 :leveloffset: 3
-include::Creating_an_EBS_Volume_Snapshot.adoc[]
+include::Creating_EBS_Volume_Snapshot.adoc[]
 
 :leveloffset: 3
 include::Attaching_EBS_Volumes.adoc[]
@@ -34,27 +34,27 @@ include::Deleting_EBS_Volumes.adoc[]
 This section outlines the actions that you can perform on OpenStack Block Storage manager volumes.
 
 :leveloffset: 3
-include::Creating_Cloud_Volumes.adoc[]
+include::Creating_OpenStack_Volumes.adoc[]
 
 :leveloffset: 3
-include::Creating_a_Backup.adoc[]
+include::Creating_OpenStack_Volume_Backups.adoc[]
 
 :leveloffset: 3
-include::Restoring_from_a_Cinder_Backup.adoc[]
+include::Restoring_an_OpenStack_Volume_Backup.adoc[]
 
 :leveloffset: 3
-include::Creating_a_Cinder_Volume_Snapshot.adoc[]
+include::Creating_OpenStack_Volume_Snapshot.adoc[]
 
 :leveloffset: 3
-include::Attaching_Volumes.adoc[]
+include::Attaching_OpenStack_Volumes.adoc[]
 
 :leveloffset: 3
-include::Detaching_Volumes.adoc[]
+include::Detaching_OpenStack_Volumes.adoc[]
 
 :leveloffset: 3
-include::Editing_Volumes.adoc[]
+include::Editing_OpenStack_Volumes.adoc[]
 
 :leveloffset: 3
-include::Deleting_Volumes.adoc[]
+include::Deleting_OpenStack_Volumes.adoc[]
 
 
