Minor structural changes in section 1.2.3. Uploading and Provisioning the CloudForms Virtual Appliance Using Azure Command-Line Interface for better readability.

--- a/doc-Installing_on_Microsoft_Azure/topics/installation.adoc
+++ b/doc-Installing_on_Microsoft_Azure/topics/installation.adoc
@@ -272,8 +272,7 @@ The steps covered in the following article are for a Windows machine, however, m
 Although it is recommended to use the PowerShell method, you can upload the appliance to an Azure environment using the Azure Command-Line Interface (Azure CLI).
 
 
-[[install-azure-cli]]
-===== Install Azure CLI 2.0
+.Install Azure CLI 2.0:
 
 Complete the steps below to install Azure CLI 2.0 using curl. See link:https://docs.microsoft.com/en-us/cli/azure/install-azure-cli[] for other installation methods.
 
@@ -291,6 +290,10 @@ $ curl -L https://aka.ms/InstallAzureCli | bash
 ----
 +
 
+
+
+
+.Uploading and Provisioning the {product-title_short} Virtual Appliance Using Azure CLI:
 
 Complete the following steps to upload and provision the {product-title} virtual appliance you converted to a fixed-size VHD format and properly aligned per requirement using the procedure in xref:converting-aligning-cfme-appliance-image[].
 
