Made sections 3.3.1. Configuring an Internal Database and 3.3.2. Configuring an External Database into subsections under section 3.3. Configuring a Database for Red Hat CloudForms

--- a/common/configuration.adoc
+++ b/common/configuration.adoc
@@ -45,12 +45,12 @@ Before using {product-title}, configure the database options for it. {product-ti
 * Configure the appliance to use an external PostgreSQL database
 
 [[configuring-an-internal-database]]
-=== Configuring an Internal Database
+==== Configuring an Internal Database
 
 include::configuration-db.adoc[]
 
 [[configuring-an-external-database]]
-=== Configuring an External Database
+==== Configuring an External Database
 
 Based on your setup, you will choose to configure the appliance to use an external PostgreSQL database. For example, we can only have one database in a single region. However, a region can be segmented into multiple zones, such as database zone, user interface zone, and reporting zone, where each zone provides a specific function. The appliances in these zones must be configured to use an external database. 
 
