--- a/doc-Installing_on_Microsoft_Azure/topics/installation.adoc
+++ b/doc-Installing_on_Microsoft_Azure/topics/installation.adoc
@@ -32,7 +32,7 @@ endif::cfme[]
 [[uploading-the-appliance-to-microsoft-azure]]
 === Uploading the {product-title} Virtual Appliance to Microsoft Azure
 
-You can upload the appliance to an Azure environment using the following two methods. Red Hat recommends using the PowerShell (AzureRm module) method.
+You can upload the appliance to an Azure environment using the following two methods. 
 
 * Using Azure PowerShell script
 * Using Azure Command-Line Interface (Azure CLI)
@@ -269,7 +269,7 @@ The steps covered in the following article are for a Windows machine, however, m
 [[uploading-the-appliance-using-azure-cli]]
 ==== Uploading and Provisioning the {product-title_short} Virtual Appliance Using Azure Command-Line Interface
 
-Although it is recommended to use the PowerShell method, you can upload the appliance to an Azure environment using the Azure Command-Line Interface (Azure CLI).
+You can upload the appliance to an Azure environment using the Azure Command-Line Interface (Azure CLI) following the process below.
 
 
 .Install Azure CLI 2.0:
@@ -293,7 +293,7 @@ $ curl -L https://aka.ms/InstallAzureCli | bash
 
 
 
-.Uploading and Provisioning the {product-title_short} Virtual Appliance Using Azure CLI:
+.Upload and Provision the {product-title_short} Virtual Appliance Using Azure CLI:
 
 Complete the following steps to upload and provision the {product-title} virtual appliance you converted to a fixed-size VHD format and properly aligned per requirement using the procedure in xref:converting-aligning-cfme-appliance-image[].
 
