cherry-pick 1st commit for image scanning new section - resolved conflict

--- a/doc-QuickStart_OpenShift_Provider_Guide/cfme/master.adoc
+++ b/doc-QuickStart_OpenShift_Provider_Guide/cfme/master.adoc
@@ -45,3 +45,9 @@ include::common/smartstate.adoc[]
 = Adding the OpenShift Deployment as a Container Provider
 
 include::topics/provider-ose-add-container.adoc[]
+
+[[scanning]]
+= Container Image Scanning
+
+include::topics/image-scanning.adoc[]
+
