--- a/doc-Managing_Providers/topics/Editing_a_Containers_Provider.adoc
+++ b/doc-Managing_Providers/topics/Editing_a_Containers_Provider.adoc
@@ -1,22 +1,55 @@
 = Editing a Containers Provider
 
-Edit information about a provider such as the name, hostname, IP address or port, and credentials.
+Edit information about a provider such as the name, hostname, IP address or port, and credentials as required. If you have just upgraded your {product-title_short} environment from an older version, edit the provider to specify the authentication method the provider uses to connect to {product-title}.
 
 
 . Navigate to menu:Compute[Containers > Providers].
 . Click the containers provider to edit.
 . Click  image:1847.png[Configuration] (*Configuration*), and then  image:1851.png[Edit Selected Containers Provider] (*Edit Selected Containers Provider*).
-. Edit the *Basic Information*.
-  This varies depending on the *Type* of provider.
+. Edit the *Name* if required.
 +
 [NOTE]
 ====
 The *Type* value is unchangeable.
 ====
 +
-To use a different containers provider, create a new one.
-. Edit the *Credentials* by typing in a new *Token*.
-. Click *Validate* and wait for notification of successful validation.
+. Under *Endpoints* in the *Default* tab, edit the following as required: 
+.. Select a *Security Protocol* method to specify how to authenticate the provider:
+* *SSL*: Authenticate the provider securely using a trusted Certificate Authority. Select this option if the provider has a valid SSL certificate and it is signed by a trusted Certificate Authority. No further configuration is required for this option.
+* *SSL trusting custom CA*: Authenticate the provider with a self-signed certificate. For this option, copy your provider’s CA certificate to the *Trusted CA Certificates* box in PEM format.
++
+[NOTE]
+====
+To obtain your OpenShift Container Platform provider's CA certificate, run the `oc get secret` command on your provider, substituting values for your provider and token as needed. To obtain a token for your provider, see xref:Obtaining_OpenShift_Container_Platform_Management_Token[].
+
+For example:
+
+  # oc get secret --namespace management-infra management-admin-token-8ixxs --template='{{index .data "ca.crt"}}' | base64 --decode
+  
+Paste the output (a block of text starting with `-----BEGIN CERTIFICATE-----`) into the *Trusted CA Certificates* field.
+====
++
+* *SSL without validation*: Authenticate the provider insecurely (not recommended).
+.. Enter the *Hostname* or IPv4 or IPv6 address of the provider.
++
+[IMPORTANT]
+====
+The *Hostname* must use a unique fully qualified domain name.
+====
++
+.. Enter the *API Port* of the provider.
+  The default port is `8443`.
+.. To change the OpenShift management token, click *Change stored token*, and enter the new token in the *Token* field. This is the token obtained earlier in xref:Obtaining_OpenShift_Container_Platform_Management_Token[].
+.. Enter the same token in the *Confirm Token* field.
+.. Click *Validate* to confirm that {product-title} can connect to the OpenShift Container Platform provider.
+. Under *Endpoints* in the *Hawkular* tab, configure the following for Hawkular capacity and utilization metrics collection:
+.. Select a *Security Protocol* method to specify how to authenticate the provider:
+* *SSL*: Authenticate the provider securely using a trusted Certificate Authority. Select this option if the provider has a valid SSL certificate and it is signed by a trusted Certificate Authority. No further configuration is required for this option.
+* *SSL trusting custom CA*: Authenticate the provider with a self-signed certificate. For this option, copy your provider’s CA certificate to the *Trusted CA Certificates* box in PEM format.
+* *SSL without validation*: Authenticate the provider insecurely using SSL. (Not recommended)
+.. Enter the *Hostname* or IPv4 or IPv6 address of the provider.
+.. Enter the *API Port* if your Hawkular provider uses a non-standard port for access. The default port is `443`.
+.. Click *Validate* to confirm that {product-title} can connect to the Hawkular endpoint.
 . Click *Save*.
 
 
