changed note to important admonition

--- a/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Catalogs_and_Services.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Catalogs_and_Services.adoc
@@ -63,7 +63,7 @@ When provisioning a service, input will be needed from the requester. *Service D
 
 [[adding-a-service-dialog]]
 ===== Adding a Service Dialog
-[NOTE]
+[IMPORTANT]
 ====
 When creating a service dialog for use with Ansible playbook catalog items, variable elements must use the prefix *param_* when assigning the value. For example, a new variable labeled *key1* should have its value set as *param_key1*.
 ====
