add description of images and instances

--- a/doc-Managing_Infrastructure_and_Inventory/topics/Instances.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Instances.adoc
@@ -1,11 +1,13 @@
-[[instances]]
-= Instances
+[[instances-and-images]]
+= Instances and Images
+*Instances* and *Images* 
 
-The *Instance* container combined with the ability to analyze information inside each instance provides in-depth information across the cloud environment.
-This rich set of information enables {product-title} users to improve problem resolution times and effectively manage instances in their cloud environment.
+*Images* are the static templates containing the software configuration from which you provision a running *Instance* - a virtual machine, with which you can interact - on your cloud provider. 
+The *Instance* and *Images* containers, combined with the ability to analyze information inside each instance or image, provides in-depth information across the cloud environment.
+This rich set of information enables {product-title} users to improve problem resolution times and effectively manage instances and images in their cloud environment.
 
-The *Instances* pages display all instances the server discovered from your cloud providers.
-The *Instances* taskbar is a menu driven set of buttons that provide access to functions related to instances.
+The *Instances* and *Images* pages display all instances and images the server discovered from your cloud providers.
+The taskbar on each page is a menu driven set of buttons that provide access to functions related to instances and images.
 
 
 image:4222.png[]
@@ -23,7 +25,7 @@ image:4222.png[]
 
 Console uses *Virtual Thumbnails* to describe instances and images.
 Each thumbnail contains four quadrants by default.
-This allows you to glance at an instance for a quick view of its contents.
+This allows you to glance at an instance or image for a quick view of its contents.
 
 
 image:3393.png[]
