Updated some text to match the latest build, and also all images without any Red Hat branding

--- a/doc-Introduction_to_Self_Service_Portal/topics/My_Requests_Tab.adoc
+++ b/doc-Introduction_to_Self_Service_Portal/topics/My_Requests_Tab.adoc
@@ -1,12 +1,12 @@
-[[my-requests-tab]]
+[[requests-tab]]
 
-== The My Requests Tab
+== The Requests Tab
 
-The *My Requests* tab further slides out with options to view either *Requests* or *Order History*. Click *Requests* to see the list of all requests made with a summary of items associated with each request, including the request ID, requester, request date, and request status. You can filter or sort the request listings by those entities using the options at the top. 
+The *Requests* tab further slides out with options to view either *Requests* or *Order History*. Click *Requests* to see the list of all service requests with a summary of items associated with each request, including the request name, last message, requester, request date, and the current status of the request. You can filter or sort the request listings by those entities using the options at the top of the screen. 
 
-Click a particular request to view more details as shown in the following screen capture.
+image:ssui-requests-nb.png[Requests Tab]
 
-image:SSUI_MyRequests_Tab.png[My Requests Tab]
+You can select one or more requests, then click the *Lifecycle* button located at the upper-right corner to *Approve* or *Deny* a request.
 
 Click *Order History* to see the list of shopping cart orders with details of each order including their ID, order date, and number of items ordered. Click an order to see further details such as the requester and order status.
 
