--- a/doc-Introduction_to_Self_Service_Portal/topics/My_Services_Tab.adoc
+++ b/doc-Introduction_to_Self_Service_Portal/topics/My_Services_Tab.adoc
@@ -6,7 +6,7 @@ The *Services* tab lists all available services with a summary of information as
 
 On the same screen, you have the option to edit the service name and description, edit tags, set ownership, retire the service now or at a later date, or remove the service. You can also perform power operations on virtual machines by clicking the more options button _(represented by three dots)_ next to the service.
 
-image:ssui-services-menu.png[]
+image:ssui-services-menu-nb.png[]
 
 You can perform most of these tasks in bulk (except editing service details and power operations). In order to do so, select the services and then click the designated button for the required task on the upper right corner of the screen. 
 
@@ -19,7 +19,7 @@ Follow this procedure to get HTML5 console access to the virtual machine. The co
 
 . From the *Services* screen, click on the required service.
 . In *Resources*, click the image:ssui-access-button.png[Access Button] button next to the virtual machine and select *Open HTML5 Console*.
-image:ssui-access-console.png[]
+image:ssui-access-console-nb.png[]
 
 The HTML5 console will open in a new window of your web browser. Note that you may have to enable the pop-up settings in your browser to access the console.
 
@@ -99,6 +99,6 @@ You can open the Cockpit console for a virtual machine from the image:ssui-acces
 . From the *Services* screen, click on the service associated with the virtual machine you want to open the Cockpit console for.
 . In *Resources*, click *Access* next to the virtual machine and select *Open Cockpit Console*. A notification will appear to show the Cockpit interface is loading. 
 . The Cockpit interface for the virtual machine will open in a new browser window. If you get a security warning by the browser, you will need to add this connection to the security exceptions. Click *Advanced → Add Exception → Confirm Security Exception*. After that, you will see the login screen.
-image:Cockpit_Login.png[Cockpit Login]
+image:cockpit-login-nb.png[Cockpit Login]
 . Once you have logged in, you will see the tabs for the dashboard and the individual machines added to Cockpit. 
-image:Cockpit_UI.png[Cockpit UI]
+image:cockpit-ui-nb.png[Cockpit UI]
