--- a/common/openstack/adding-an-openstack-cloud-provider.adoc
+++ b/common/openstack/adding-an-openstack-cloud-provider.adoc
@@ -2,10 +2,9 @@
 When creating an OpenStack provider in {product-title}, select the OpenStack provider's `admin` user because it is the default administrator of the OpenStack `admin` tenant.
 When using the `admin` credentials, a user in {product-title} provisions into the `admin` tenant, and sees images, networks, and instances that are associated with the `admin` tenant.
 
-[NOTE]
-=====
+
 include::tenant-mapping.adoc[]
-=====
+
 
 [NOTE]
 =====
@@ -13,6 +12,11 @@ You can set whether {product-title} should use the Telemetry service or Advanced
 
 For more information, see https://access.redhat.com/documentation/en/red-hat-openstack-platform/8/architecture-guide/chapter-1-components#comp-telemetry[OpenStack Telemetry (ceilometer)] in the Red Hat OpenStack Platform _Architecture Guide_.
 =====
+
+[NOTE]
+====
+To authenticate the provider using a self-signed Certificate Authority (CA), configure the {product-title_short} appliance to trust the certificate using the steps in  xref:app-self_signed_CA[] before adding the provider.
+====
 
 . Navigate to menu:Compute[Clouds > Providers].
 
