--- a/common/openstack/adding-an-openstack-infrastructure-provider.adoc
+++ b/common/openstack/adding-an-openstack-infrastructure-provider.adoc
@@ -9,6 +9,10 @@ You can set whether {product-title} should use the Telemetry service or Advanced
 For more information, see https://access.redhat.com/documentation/en/red-hat-openstack-platform/8/architecture-guide/chapter-1-components#comp-telemetry[OpenStack Telemetry (ceilometer)] in the Red Hat OpenStack Platform _Architecture Guide_.
 =====
 
+[NOTE]
+====
+To authenticate the provider using a self-signed Certificate Authority (CA), configure the {product-title_short} appliance to trust the certificate using the steps in  xref:app-self_signed_CA[] before adding the provider.
+====
 
 . Navigate to menu:Compute[Infrastructure > Providers].
 . Click  image:1847.png[Configuration] (*Configuration*), then click  image:1862.png[Add a New Infrastructure Provider] (*Add a New Infrastructure Provider*).
