added Automation Providers description

--- a/doc-Managing_Providers/topics/Automation_Management_Providers.adoc
+++ b/doc-Managing_Providers/topics/Automation_Management_Providers.adoc
@@ -1,6 +1,8 @@
 [[automation_management_providers]]
 = Automation Management Providers
 
+In {product-title}, an automation management provider is a management tool that integrates with {product-title_short} to simplify automation operations for your resources. This chapter describes the automation management providers that you can use with {product-title}, and how to work with them. 
+
 
 [[ansible-inside]]
 == Ansible
