--- a/doc-Managing_Providers/topics/Networking_Providers.adoc
+++ b/doc-Managing_Providers/topics/Networking_Providers.adoc
@@ -1,7 +1,7 @@
 [[network_providers]]
 = Network Managers
 
-In {product-title}, a network manager is a inventory of networking entities on existing cloud and infrastructure providers managed by your {product-title_short} appliance.
+In {product-title}, a network manager is an inventory of networking entities on existing cloud and infrastructure providers managed by your {product-title_short} appliance.
 
 This provider type exposes software-defined networking (SDN) providers including _OpenStack Network (Neutron)_, _Azure Network_, _Amazon EC2 Network_, and _Google Cloud Network_, which enables software-defined networking inventory collection. The OpenStack Network provider collects inventory of floating IPs from OpenStack so that IPs can be allocated without querying OpenStack database every time. Also, it refreshes all Neutron data from both OpenStack and OpenStack Infrastructure, and extracts the Neutron logic to a shared place. Note that management via the network providers configuration is currently disabled.
 
