Further updates including screen captures to match the latest build.

--- a/doc-Introduction_to_Self_Service_Portal/topics/Navigating_Self_Service_UI.adoc
+++ b/doc-Introduction_to_Self_Service_Portal/topics/Navigating_Self_Service_UI.adoc
@@ -4,11 +4,10 @@
 The Self Service user interface has a slideout navigation menu on the left that can be minimized by clicking the menu icon (≡), like in the full administrative user interface. The slideout navigation menu comprises of the following tabs:
 
 * *Dashboard*
-* *Services*
+* *My Services*
 * *Orders*
-* *Requests* 
-* *Catalogs*
-* *Dialogs*
+* *Service Catalogs*
+
 
 The menu bar that runs along the top of the user interface contains several options including a shopping cart, notifications feature, full administrative user interface option, and a help option. Besides that, you can see the current logged in LDAP user, for example, *Administrator*. 
 
