--- a/doc-Introduction_to_Self_Service_Portal/topics/My_Services_Tab.adoc
+++ b/doc-Introduction_to_Self_Service_Portal/topics/My_Services_Tab.adoc
@@ -1,16 +1,16 @@
 [[my-services-tab]]
 
-== The Services Tab
+== The My Services Tab
 
-The *Services* tab lists all available services with a summary of information associated with each service, including the *Service Name*, its current *Power State* represented by an icon, *Number of VMs*, *Owner*, date *Created*, and *Retires* date. Additionally, you can see the chargeback cost per service for a virtual machine's month-to-date usage. You can filter or sort services by those entities, and by *Relative Cost*. 
+The *My Services* tab lists all available services with a summary of information associated with each service, including the *Service Name*, its current *Power State* represented by an icon, *Number of VMs*, *Owner*, date *Created*, and *Retires* date. Additionally, you can see the chargeback cost per service for a virtual machine's month-to-date usage. You can filter or sort services by those entities, and by *Relative Cost*. 
 
-On the same screen, you have the option to edit the service name and description, edit tags, set ownership, retire the service now or at a later date, or remove the service. You can also perform power operations on virtual machines by clicking the more options button _(represented by three dots)_ next to the service.
+On the same screen, you have the option to edit the service name and description, edit tags, set ownership, retire the service now or at a later date, or remove the service. You can also perform power operations on virtual machines by clicking more options _(represented by three dots)_ next to the service.
 
-image:ssui-services-menu-nb.png[]
+image:sui-services.png[]
 
-You can perform most of these tasks in bulk (except editing service details and power operations). In order to do so, select the services and then click the designated button for the required task on the upper right corner of the screen. 
+You can perform most of these tasks in bulk (except editing service details and power operations). In order to do so, select multiple services and then click the designated button for the required task on the upper right corner of the screen. 
 
-Additionally, click on a service to view more details, including information on associated virtual machines and snapshots, and its relationship data.
+Click on a service to view more details, including information about associated virtual machines and snapshots, and its relationship data. Additionally, under *Resources*, you can click on a virtual machine's name to see its properties, and perform power operations at the resource level. Click on *Snapshots* to see the list of available snapshots, as well as create or delete snapshots via the *Configuration* button. A snapshot is a copy of the virtual machine's disk file that captures the entire state of the virtual machine at that point in time. Use *Revert* under more options _(represented by three dots)_ to return a virtual machine to a previous state when you took the snapshot.
 
 [[html5-console]]
 === Accessing the HTML5 Console
